public_html/components/todolist/style.css
.todolist {
    height: 550px;
    background-color: #646464;
    color: white;
}

.todolist-maximized {
    width: 600px;
    animation-name: maximize;
    animation-duration: 0.5s;
    float: left;
    position: relative;
}

.todolist-minimized {
    width: 0px;
    animation-name: minimize;
    animation-duration: 0.5s;
    float: left;
    position: relative;
}

@keyframes maximize {
    from {width: 0px;}
    to {width: 600px;}
}

@keyframes minimize {
    from {width: 600px;}
    to {width: 0px;}
}

.todolist-header {
    height: 44px;
    width: 100%;
    min-width: 1px;
    float: left;
}

.todolist-content {
    height: 476px;
    width: 100%;
    min-width: 1px;
    overflow: auto;
    float: left;
}

.todolist-footer {
    height: 30px;
    width: 100%;
    min-width: 1px;
    float: left;
}

.todolist-title-row {
    margin-top: 6px;
    height: 28px;
    background-color: #747474;
    width: 100%;
    float: left;
}

.todolist-title-text {
    margin-top: 2px;
    margin-left: 20px;
    font-size: 20px;
    float: left;
}

.todolist-project {
    padding-right: 20px;
    margin-bottom: 10px;
    width: 50%;
    height: 24px;
    background-color: #585858;
    float: left;
}

.todolist-project:hover {
    background-color: #484848;
    cursor: pointer;
}

.todolist-project-name {
    margin-top: 3px;
    margin-left: 10px;
    max-width: 100%;
    height: 20px;
    overflow: hidden;
    float: left;
}

.todolist-project-control {
    margin-top: 2px;
    margin-left: 5px;
    height: 20px;
    width: 20px;
    background-color: #585858;
    cursor: pointer;
    float: left;
}

.todolist-project-control-arrow-up {
    height: 20px;
    width: 20px;
    background-image: url("icons/arrow-up.png");
}

.todolist-project-control-arrow-down {
    height: 20px;
    width: 20px;
    background-image: url("icons/arrow-down.png");
}

.todolist-project-control-edit {
    background-image: url("icons/edit.png");
}

.todolist-project-control-remove {
    background-image: url("icons/cross.png");
}

.todolist-tasks {
    margin-left: 10px;
}

.todolist-task {
    margin-bottom: 6px;
    width: 80%;
}

.todolist-task-dash {
    margin-top: 3px;
    margin-right: 8px;
    width: 10px;
    height: 10px;
    background-image: url("icons/hierarchy-dash.png");
    float: left;
}

.todolist-task-detail {

}

.todolist-create-task-dialog {
    padding: 5px 10px 4px 5px;
    margin-top: 20px;
    margin-left: 5px;
    background-color: #747474;
    float: left;
}

.todolist-new-task-input-text {
    width: 550px;
    text-decoration: none;
    border: 0;
    outline: none;
    word-wrap: break-word;
    word-break: break-all;
    float: left;
}

.todolist-footer-button {
    margin-left: 40px;
    float: left;
}

.todolist-button {
    padding: 2px 6px 2px 6px;
    min-width: 50px;
    min-height: 20px;
    background-color: #585858;
    color: white;
    border-radius: 5px;
    font-size: 18px;
    cursor: pointer;
    float: left;
}

.todolist-button:hover {
    background-color: #505050;
}

.todolist-maximize-minimize-button {
    width: 30px;
    height: 30px;
    background-color: white;
    cursor: pointer
}

.todolist-maximize-minimize-button-left {
    float: left;
}

.todolist-maximize-minimize-button-right {
    float: right;
}

.todolist-big-arrow-right {
    background-image: url("icons/big-arrow-right.png");
    background-size: cover;
}

.todolist-big-arrow-left {
    background-image: url("icons/big-arrow-left.png");
    background-size: cover;
}

::-webkit-scrollbar {
    width: 15px;
    background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb {
    background-color: #A4A4A4;
}

